Fix Whitespace on buttons

--- a/src/assets/css/product_configurator.scss
+++ b/src/assets/css/product_configurator.scss
@@ -548,6 +548,7 @@ $inner_space: 1em;
  							line-height: 1.3; 
 							color: color(layers_button_text_color);
 							font-weight: normal;
+							white-space: normal;
 
  							&:hover, &:focus {
  								color: color(primary_hover);
